--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,2 +1,9 @@
 ---
 ---
+@inproceedings{Hu2022RobustnessOD,
+  title  = {Robustness of Deep Equilibrium Architectures to Changes in the Measurement Model},
+  author = {Jun-Hao Hu and Shirin Zargar Shoushtari and Zihao Zou and Jiaming Liu and Zhixin Sun and Ulugbek S.Kamilov},
+  year   = {2022},
+  preview = {mismatch.png},
+  pdf={https://arxiv.org/pdf/2211.00531.pdf}
+}
