--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -7,3 +7,9 @@
   preview = {mismatch.png},
   pdf={https://arxiv.org/pdf/2211.00531.pdf}
 }
+@article{zou2023deep,
+  title={Deep Equilibrium Learning of Explicit Regularizers for Imaging Inverse Problems},
+  author={Zou, Zihao and Liu, Jiaming and Wohlberg, Brendt and Kamilov, Ulugbek S},
+  journal={arXiv preprint arXiv:2303.05386},
+  year={2023}
+}
