--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -11,5 +11,6 @@
   title={Deep Equilibrium Learning of Explicit Regularizers for Imaging Inverse Problems},
   author={Zou, Zihao and Liu, Jiaming and Wohlberg, Brendt and Kamilov, Ulugbek S},
   journal={arXiv preprint arXiv:2303.05386},
+  preview = {Screenshot 2023-05-27 at 9.24.58 PM.png}
   year={2023}
 }
