--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -11,6 +11,7 @@
   title={Deep Equilibrium Learning of Explicit Regularizers for Imaging Inverse Problems},
   author={Zou, Zihao and Liu, Jiaming and Wohlberg, Brendt and Kamilov, Ulugbek S},
   journal={arXiv preprint arXiv:2303.05386},
-  preview = {Screenshot 2023-05-27 at 9.24.58 PM.png}
+  preview = {Screenshot 2023-05-27 at 9.24.58 PM.png},
+  html={https://wustl-cig.github.io/elderwww/},
   year={2023}
 }
