--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,9 +1,12 @@
 ---
 ---
-@inproceedings{Hu2022RobustnessOD,
-  title  = {Robustness of Deep Equilibrium Architectures to Changes in the Measurement Model},
-  author = {Jun-Hao Hu and Shirin Zargar Shoushtari and Zihao Zou and Jiaming Liu and Zhixin Sun and Ulugbek S.Kamilov},
-  year   = {2022},
+@inproceedings{hu2023robustness,
+  title={Robustness of Deep Equilibrium Architectures to Changes in the Measurement Model},
+  author={Hu, Junhao and Shoushtari, Shirin and Zou, Zihao and Liu, Jiaming and Sun, Zhixin and Kamilov, Ulugbek S},
+  booktitle={ICASSP 2023-2023 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP)},
+  pages={1--5},
+  year={2023},
+  organization={IEEE},
   preview = {mismatch.png},
   pdf={https://arxiv.org/pdf/2211.00531.pdf}
 }
