--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -16,5 +16,6 @@
   journal={arXiv preprint arXiv:2303.05386},
   preview = {Screenshot 2023-05-27 at 9.24.58 PM.png},
   html={https://wustl-cig.github.io/elderwww/},
+  pdf = {https://arxiv.org/pdf/2303.05386},
   year={2023}
 }
