--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,15 +1,5 @@
 ---
 ---
-@inproceedings{hu2023robustness,
-  title={Robustness of Deep Equilibrium Architectures to Changes in the Measurement Model},
-  author={Hu, Junhao and Shoushtari, Shirin and Zou, Zihao and Liu, Jiaming and Sun, Zhixin and Kamilov, Ulugbek S},
-  booktitle={ICASSP 2023-2023 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP)},
-  pages={1--5},
-  year={2023},
-  organization={IEEE},
-  preview = {mismatch.png},
-  pdf={https://arxiv.org/pdf/2211.00531.pdf}
-}
 @article{zou2023deep,
   title={Deep Equilibrium Learning of Explicit Regularizers for Imaging Inverse Problems},
   author={Zou, Zihao and Liu, Jiaming and Wohlberg, Brendt and Kamilov, Ulugbek S},
@@ -18,4 +8,15 @@
   html={https://wustl-cig.github.io/elderwww/},
   pdf = {https://arxiv.org/pdf/2303.05386},
   year={2023}
+}
+@inproceedings{hu2023robustness,
+  title={Robustness of Deep Equilibrium Architectures to Changes in the Measurement Model},
+  author={Hu, Junhao and Shoushtari, Shirin and Zou, Zihao and Liu, Jiaming and Sun, Zhixin and Kamilov, Ulugbek S},
+  booktitle={ICASSP 2023-2023 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP)},
+  pages={1--5},
+  year={2023},
+  organization={IEEE},
+  preview = {mismatch.png},
+  pdf={https://arxiv.org/pdf/2211.00531.pdf},
+  html={https://ieeexplore.ieee.org/abstract/document/10096199}
 }
