--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,15 +1,33 @@
 ---
 ---
+@article{zou2023flair,
+title={FLAIR: A Conditional Diffusion Framework with Applications to Face Video Restoration},
+author={Zihao Zou and Jiaming Liu and Shirin Shoushtari and Yubo Wang and Weijie Gan and Ulugbek S. Kamilov},
+journal={arXiv preprint arXiv:2311.15445},
+website={https://wustl-cig.github.io/flairwww/},
+pdf={https://arxiv.org/abs/2311.15445},
+preview = {flair.gif},
+year={2023}
+}
+@article{gan2023structured,
+  title={A Structured Pruning Algorithm for Model-based Deep Learning},
+  author={Gan, Weijie and Zou, Zihao and Hu, Yuyang and Sun, Zhixin and Kamilov, Ulugbek S},
+  journal={arXiv preprint arXiv:2311.02003},
+  pdf={https://arxiv.org/abs/2311.02003},
+  preview = {spade.png},
+  year={2023}
+}
 @article{zou2023deep,
   title={Deep Equilibrium Learning of Explicit Regularizers for Imaging Inverse Problems},
   author={Zou, Zihao and Liu, Jiaming and Wohlberg, Brendt and Kamilov, Ulugbek S},
-  journal={arXiv preprint arXiv:2303.05386},
+  journal={IEEE Open Journal of Signal Processing},
   preview = {Screenshot 2023-05-27 at 9.24.58 PM.png},
-  html={https://wustl-cig.github.io/elderwww/},
+  website={https://wustl-cig.github.io/elderwww/},
   pdf = {https://arxiv.org/pdf/2303.05386},
+  publisher={IEEE},
   year={2023}
 }
-@inproceedings{hu2023robustness,
+@article{hu2023robustness,
   title={Robustness of Deep Equilibrium Architectures to Changes in the Measurement Model},
   author={Hu, Junhao and Shoushtari, Shirin and Zou, Zihao and Liu, Jiaming and Sun, Zhixin and Kamilov, Ulugbek S},
   booktitle={ICASSP 2023-2023 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP)},
@@ -17,6 +35,6 @@
   year={2023},
   organization={IEEE},
   preview = {mismatch.png},
-  pdf={https://arxiv.org/pdf/2211.00531.pdf},
-  html={https://ieeexplore.ieee.org/abstract/document/10096199}
+  pdf={https://arxiv.org/abs/2211.00531}
 }
+
