--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,11 +3,11 @@
 @article{zou2023flair,
 title={FLAIR: A Conditional Diffusion Framework with Applications to Face Video Restoration},
 author={Zihao Zou and Jiaming Liu and Shirin Shoushtari and Yubo Wang and Weijie Gan and Ulugbek S. Kamilov},
-journal={arXiv preprint arXiv:2311.15445},
+journal={IEEE/CVF Winter Conference on Applications of Computer Vision},
 website={https://wustl-cig.github.io/flairwww/},
 pdf={https://arxiv.org/abs/2311.15445},
 preview = {flair.gif},
-year={2023}
+year={2024}
 }
 @article{gan2023structured,
   title={A Structured Pruning Algorithm for Model-based Deep Learning},
